-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2002-02-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-chainop.h (release): added
	* eca-chain.h (release): added

2002-02-09  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

        * eca-audio-format.h (set_audio_format): renamed to
	set_audio_format_string to avoid clashed with virtual
	overloaded function set_audio_format()
	
2002-02-01  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* eca-audio-position.h (length_in_samples): renamed to set_length_in_samples
	* eca-audio-position.h (position_in_samples): renamed to set_position_in_samples
	* eca-audio-position.h (position_in_seconds): renamed to set_position_in_seconds
	* eca-audio-position.h (position_in_samples_advance): renamed to change_position_in_samples
	* eca-chainsetup-position.h (): changed to inherit ECA_AUDIO_POSITION
	* eca-chain.h (): changed to inherit ECA_AUDIO_POSITION
	* finite-envelope.h (): changed to inherit ECA_AUDIO_POSITION
	* eca-control-objects.h (rewind_chains): removed
	* eca-control-objects.h (forward_chains): removed
	* eca-control-objects.h (set_position_chains): removed
	* eca-control-objects.h (change_position_chains): removed
		
2002-01-31  Kai Vehmanen <kai.vehmanen@wakkanet.fi>

	* samplebuffer.h (constructor): srate param removed
	* samplebuffer.h (resample_to,resample_from): replaced with resample()
	* samplebuffer.h (export_*,import_): srate param removed
	* samplebuffer.h (sample_rate): function removed
	* samplebuffer.h (length_in_seconds): function removed
	* eca-audio-time.h (): all samplerate information moved to ECA_SAMPLERATE_AWARE 
	* eca-audio-time.h (bytes_per_second): return changed to 'long int'
	* audiofx.h (): added inheritance of ECA_SAMPLERATE_AWARE
	* eca-audio-format.h (channels_changed): removed