@@ -2,6 +2,10 @@
 *** ecasound - changes and additions to libecasound interface       ***
 -----------------------------------------------------------------------
 
+2002-02-24  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
+
+	* eca-audio-format (set_audio_format): turned into a virtual function
+
 2002-02-13  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
 
 	* eca-chainop.h (release): added
